JSM-3061 corrected alignment and removed new

--- a/web/css/jsms/common/commoncss.css
+++ b/web/css/jsms/common/commoncss.css
@@ -206,6 +206,9 @@ header, section, footer, aside, nav, article, figure {
 .wid50p {
 	width:50%
 }
+.wid51p {
+	width:51%
+}
 .wid60p {
 	width:60%
 }
